# ios-snapshot-test-case

./: BUILD.bazel  build.sh
FBSnapshotTestCase.xcodeproj/: project.pbxproj
src/iOSSnapshotTestCaseTests/: BUILD.bazel
